--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js">
   </script>
-  <script charset="UTF-8" async type="text/javascript" src="./9498e8aa071e0c.js"></script>
+  <script charset="UTF-8" async type="text/javascript" src="./js/9498e8aa071e0c.js"></script>
   <!-- Meta setup -->
   <meta charset="utf-8"/>
   <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
